# shellctl

./: .gitignore  CLAUDE.md  Makefile  PROJECT.md  README.md  pyproject.toml  shell-trace-run
.claude/: settings.json
.cursor/rules/: config-secrets.mdc  freecad-macros.mdc  issue-tracker-kanban.mdc  project-source-of-truth.mdc  python-ruff.mdc
config/: shellctl.global.defaults.toml  shellenv.global.defaults.toml
infra/vikunja/: .env.example  docker-compose.yml
libexec/: refresh-shelltree.py  validate-discovery.py
patches/: README.md  bash-sourcetrace.patch  bash-xtrace-fileline.patch  tcsh-TCSH_XTRACEFD.patch  tcsh-allow-l-with-args.patch  tcsh-closem-preserve-xtracefd.patch  tcsh-sourcetrace.patch  tcsh-xtrace-filepath.patch
src/env_config/: cli.py  compose.py  config.py  discover.py  modes.py  trace.py  tui.py
src/shellctl/: __init__.py  backup.py  cli.py  compose.py  config.py  discover.py  trace.py  tui.py
src/shellenv/: cli.py  compose.py  config.py  discover.py  modes.py  trace.py  tui.py
tests/: test_backup.py  test_compose.py  test_config.py  test_config_cli.py  test_config_editor.py  test_config_getset.py  test_config_schema.py  test_detect_shell.py  test_discover.py  test_discover_cache.py  test_discover_existing_filter.py  test_discover_modes.py  test_discover_shell_trace.py  test_discover_strace_parse.py  test_modes.py  test_trace_mock.py  test_trace_parser.py  test_tui_actions.py  test_tui_backup_restore.py
tests/fixtures/traces/: tcsh_login_noninteractive.txt  zsh_login_noninteractive.txt
tools/: vikunja_cli.py
