[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-config"
version = "0.1.0"
description = "Tool to manage shell environment startup files"
authors = [ { name = "Michael Rice", email = "michael@riceclan.org" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tabulate>=0.9.0",
    "tomli-w",
]

[project.scripts]
env-config = "env_config.cli:_entry"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
]
